# smart-fluid-flow-meter

./: .gitmodules  README.md
.circleci/: config.yml
backend/: .dockerignore  .env.sample  .gitignore  Cargo.toml  Makefile  README.md
backend/assets/db-migrations/: 0001_create_measurement_table.sql  0002_create_user_table.sql
backend/assets/fixtures/mysql/: init.sql
backend/dockerfiles/: dev  dev-vim  docker-compose-mysql.yaml  docker-compose-test.yaml  prod
backend/settings/: default.toml
backend/src/: api.rs  http_client.rs  lib.rs  main.rs  storage.rs
backend/src/api/: health.rs  measure.rs  measurement.rs  user.rs
backend/src/error/: app_error.rs
backend/src/handler/: health.rs  measure.rs  measurement.rs  user.rs
backend/src/helper/: user.rs
backend/src/http_client/: cloudflare.rs  common.rs
backend/src/json/: extractor.rs
backend/src/settings/: settings.rs
backend/src/storage/: error.rs  firestore.rs  memory.rs  mysql.rs
backend/tests/config/: default.yaml
backend/tests/handler/: measure.rs  measurement.rs  mod.rs  user.rs
case/: README.md  case.FCStd
case/indoor/: case.FCStd
esp32/: .gitignore  Makefile  README.md  entrypoint.sh
esp32/dev-environments/vim/: customizations.sh
esp32/dockerfiles/: dev  dev-vim
esp32/src/: CMakeLists.txt
esp32/src/components/button/: CMakeLists.txt
esp32/src/components/button/include/: button.hpp
esp32/src/components/button/src/: button.cpp
esp32/src/components/fluid-meter/: CMakeLists.txt
esp32/src/components/fluid-meter/include/: fluid-meter.hpp
esp32/src/components/fluid-meter/src/: fluid-meter.cpp
esp32/src/components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp
esp32/src/components/wifi_manager/include/: types.hpp  wifi_manager.hpp
esp32/src/main/: CMakeLists.txt  main.cpp
esp32/src/main/include/: backend-service.hpp
esp32/src/main/src/: backend-service.cpp  main.cpp
esp32/src/main/test/: CMakeLists.txt
esp32/src/main/test/src/: backend-service-test.cpp
frontend/: .gitignore  Makefile  README.md
frontend/dockerfiles/: dev  dev-vim  prod
frontend/svelte-app/: eslint.config.js  package-lock.json  package.json
frontend/svelte-app/.storybook/: main.js  preview.js
frontend/svelte-app/src/: app.css  app.d.ts
frontend/svelte-app/src/lib/components/: MdHeader.svelte  MdNav.svelte
frontend/svelte-app/src/lib/utils/: Constants.ts  Cookies.ts  HttpClient.ts
frontend/svelte-app/src/routes/: +layout.svelte  +page.svelte
kicad/: .gitignore  smart-fluid-flow-meter.kicad_pcb  smart-fluid-flow-meter.kicad_prl  smart-fluid-flow-meter.kicad_pro  smart-fluid-flow-meter.kicad_sch
kicad/footprints/: esp32_devkit_v1.kicad_mod
kicad/gerbers/: smart-fluid-flow-meter-B_Cu.gbr  smart-fluid-flow-meter-B_Mask.gbr  smart-fluid-flow-meter-B_Silkscreen.gbr  smart-fluid-flow-meter-Edge_Cuts.gbr  smart-fluid-flow-meter-F_Cu.gbr  smart-fluid-flow-meter-F_Mask.gbr  smart-fluid-flow-meter-F_Silkscreen.gbr  smart-fluid-flow-meter-job.gbrjob
kicad/smart-fluid-flow-meter/: smart-fluid-flow-meter.kicad_prl  smart-fluid-flow-meter.kicad_pro  smart-fluid-flow-meter.kicad_sch
kicad/smart-fluid-flow-meter/gerbers/: smart-fluid-flow-meter-B_Silkscreen.gbr  smart-fluid-flow-meter-F_Cu.gbr  smart-fluid-flow-meter-NPTH.drl  smart-fluid-flow-meter-PTH.drl  smart-fluid-flow-meter-job.gbrjob
kicad/spice/: led.lib
kicad/symbols/: esp32-devkitv1.kicad_sym
scripts/: publish-backend.sh  publish-frontend.sh  tag.sh  verify-and-tag.sh
sketch/: .gitignore  CMakeLists.txt  Makefile  README.md  sketch.ino
sketch/dockerfiles/: dev  dev-vim
sketch/src/: Makefile  backend-service.cpp  backend-service.hpp  button.cpp  button.hpp  eeprom_storage.cpp  eeprom_storage.h  fluid-meter.cpp  fluid-meter.hpp  main.cpp  sketch.yaml
sketch/src/r4-wifi-manager/: r4-wifi-manager.cpp  r4-wifi-manager.h
sketch/test/: CMakeLists.txt
sketch/test/include/: Arduino.cpp  Arduino.h  WiFiS3.cpp  WiFiS3.h
sketch/test/src/r4-wifi-manager/: r4-wifi-manager-test.cpp
