[package]
name = "smart_fluid_flow_meter_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.37", features = ["serde"] }
config = "0.14.0"
firestore = "0.40.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
serde_json = "1.0"
test-log = "0.2.15"
tower = { version = "0.4", features = ["util"] }
